--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="card">
                     <h3>Upcoming Events</h3>
-                    <p>Stay tuned for our upcoming events and launches.</p>
+                    <p>Stay tuned for our upcoming events and Services.</p>
                 </div>
             </div>
         </div>
@@ -55,3 +55,4 @@
 
 </body>
 </html>
+
