--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,8 @@
     <section id="contact">
         <div class="container">
             <h2>Contact Us</h2>
+            <p>If you have any questions, suggestions, or just want to say hello, feel free to drop us a message below!</p>
+
             <form id="contact-form" action="submit_form.php" method="POST">
                 <div class="form-group">
                     <label for="name">Full Name</label>
@@ -40,7 +42,7 @@
                     <label for="message">Message</label>
                     <textarea id="message" name="message" rows="5" required placeholder="Your Message"></textarea>
                 </div>
-                <button type="submit">Send Message</button>
+                <button type="submit" class="submit-btn">Send Message</button>
             </form>
         </div>
     </section>
